# opengl-learning

./: CMakeLists.txt  main.cpp
components/: utils.cpp
components/includes/: utils.h
libs/: glad.c
libs/includes/: glad.h
